Remove render roomlist and Add css to prevent horizontal scrolling on the page

--- a/src/index.scss
+++ b/src/index.scss
@@ -15,6 +15,11 @@ body {
   overflow: hidden;
 }
 
+html, body, #root {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
